# VK-data

./: README.md  pyproject.toml
api/: main.py
config/: settings.yaml
etl/: cli.py  config.py  ingest.py  raw_storage.py
etl/fixtures/: aineistot.json
etl/fixtures/datasets/: kayttotalous-2023-espoo.json  kayttotalous-2023-helsinki.json  other-2023-vantaa.json  tuloslaskelma-2023-helsinki.json
tests/: test_config.py  test_ingest.py  test_raw_storage.py
