[project]
name = "vk-data-platform"
version = "0.1.0"
description = "Finnish municipal finance analytics backend MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "duckdb>=1.0.0",
  "polars>=1.8.0",
  "pyyaml>=6.0.2",
  "pydantic>=2.8.0",
  "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
